--- a/03-templates/views/index.hbs
+++ b/03-templates/views/index.hbs
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Welcome!</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi similique nihil laudantium fuga adipisci, sapiente nisi suscipit quis facilis, maxime exercitationem ullam minima temporibus recusandae itaque placeat voluptatem iste aliquam!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur praesentium aliquam veniam deserunt, eaque vel sapiente excepturi, magnam distinctio inventore nulla earum cumque doloremque atque possimus esse temporibus dolore molestias!</p>
+    <img src="apples.jpg"/>
 </body>
 </html>
