--- a/06b-form-validation/views/login.hbs
+++ b/06b-form-validation/views/login.hbs
@@ -9,8 +9,8 @@
 <body>
     <form method="POST">
         <div>
-            <label>Email:</label>
-            <input type="text" name="email"/>
+            <labe>Email:</label>
+            <input type="text" name="item"/>
         </div>
         <div>
             <label>Password:</label>
